--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                         <svg class="icon-envelope" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
-                        info@devstudio.com</a></li>
+                        <span>info@devstudio.com</span></a></li>
                 <li class="item"><a href="tel:+380961111111" class="contact-link">
                         <svg class="icon-smartphone" width="12" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
-                        +38 096 111 11 11</a></li>
+                        <span>+38 096 111 11 11</span></a></li>
             </ul>
         </div>
     </header>
@@ -57,7 +57,7 @@
                 <ul class="advantage list">
                     <li class="item">
                         <div class="feature">
-                            <svg height="70">
+                            <svg height="70" width="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="item">
                         <div class="feature">
-                            <svg height="70">
+                            <svg height="70" width="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -79,7 +79,7 @@
                     </li>
                     <li class="item">
                         <div class="feature">
-                            <svg height="70">
+                            <svg height="70" width="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -90,7 +90,7 @@
                     </li>
                     <li class="item icon">
                         <div class="feature">
-                            <svg height="70">
+                            <svg height="70" width="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -126,7 +126,7 @@
                         <div class="names">
                             <h3 class="names-title">Игорь Демьяненко</h3>
                             <p lang="en" class="profession">Product Designer</p>
-                            <ul class="social list">
+                            <ul class="social-list list">
                                 <li><a href="#" aria-label="instagram" class="social-network">
                                         <svg class="icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
@@ -156,7 +156,7 @@
                         <div class="names">
                             <h3 class="names-title">Ольга Репина</h3>
                             <p lang="en" class="profession">Frontend Developer</p>
-                            <ul class="social list">
+                            <ul class="social-list list">
                                 <li><a href="#" aria-label="instagram" class="social-network">
                                         <svg class="icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
@@ -186,7 +186,7 @@
                         <div class="names">
                             <h3 class="names-title">Николай Тарасов</h3>
                             <p lang="en" class="profession">Marketing</p>
-                            <ul class="social list">
+                            <ul class="social-list list">
                                 <li><a href="#" aria-label="instagram" class="social-network">
                                         <svg class="icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
@@ -216,7 +216,7 @@
                         <div class="names">
                             <h3 class="names-title">Михаил Ермаков</h3>
                             <p lang="en" class="profession">UI Designer</p>
-                            <ul class="social list">
+                            <ul class="social-list list">
                                 <li><a href="#" class="social-network">
                                         <svg class="icon" width="20" height="20">
                                             <use href="./images/icons.svg#icon-instagram"></use>
@@ -285,48 +285,51 @@
         </section>
     </main>
     <footer class="footer section">
-        <div class="container footer-list">
-            <div class="address">
-                <a href="/" class="logo logo-footer"><span class="web-logo">Web</span><span
-                        class="studio-logo">Studio</span></a>
-                <address>
-                    <ul class="footer-nav list">
-                        <li class="item"><a
-                                href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-                                class="address-link">г.Киев, пр-т Леси Украинки,26</a></li>
-                        <li class="item"><a href="mailto:info@example.com" class="contact-link">info@example.com</a>
-                        </li>
-                        <li class="item"><a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a></li>
-                    </ul>
-                </address>
-            </div>
+        <div class="container">
+            <ul class="footer-content list">
+                <li class="address">
+                    <a href="/" class="logo logo-footer"><span class="web-logo">Web</span><span
+                            class="studio-logo">Studio</span></a>
+                    <address>
+                        <ul class="footer-nav list">
+                            <li class="item"><a
+                                    href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
+                                    class="address-link">г.Киев, пр-т Леси Украинки,26</a></li>
+                            <li class="item"><a href="mailto:info@example.com" class="contact-link">info@example.com</a>
+                            </li>
+                            <li class="item"><a href="tel:+380991111111" class="contact-link">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </li>
 
-            <div class="join">
-                <p class="join-title">присоединяйтесь</p>
-                <ul class="social-footer list">
-                    <li class="item"><a href="#" aria-label="instagram" class="social-network-footer">
-                            <svg class="icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item"><a href="#" aria-label="twitter" class="social-network-footer">
-                            <svg class="icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a></li>
-                    <li class="item"><a href="#" aria-label="facebook" class="social-network-footer">
-                            <svg class="icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a></li>
-                    <li class="item"><a href="#" aria-label="linkedin" class="social-network-footer">
-                            <svg class="icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a></li>
-                </ul>
-            </div>
+
+                <li class="join">
+                    <p class="join-title">присоединяйтесь</p>
+                    <ul class="social-footer list">
+                        <li class="item"><a href="#" aria-label="instagram" class="social-network-footer">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item"><a href="#" aria-label="twitter" class="social-network-footer">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a></li>
+                        <li class="item"><a href="#" aria-label="facebook" class="social-network-footer">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a></li>
+                        <li class="item"><a href="#" aria-label="linkedin" class="social-network-footer">
+                                <svg class="icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
